# matplotlib-polyroi

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/workflows/: binder.yaml
binder/: Dockerfile
data/: example_par2.TIF
docs/source/: conf.py  index.rst  matplotlib_polyroi.rst  modules.rst
matplotlib_polyroi/: __init__.py  funcs.py  roi.py
matplotlib_roi/: __init__.py
scripts/: Demonstration.ipynb  roi1.txt  roi2.txt  roi3.txt
